--- a/templates/ca_cert.signing_policy.j2
+++ b/templates/ca_cert.signing_policy.j2
@@ -1,3 +1,3 @@
 access_id_CA   X509    '{{item.subject}}'
 pos_rights     globus  CA:sign
-cond_subjects  globus  '"{{item.policy}}"'
+cond_subjects  globus  '{{item.policy}}'
